Fix global nav link styles and visibility

--- a/arachnology-amnh-app/src/styles.scss
+++ b/arachnology-amnh-app/src/styles.scss
@@ -80,7 +80,7 @@ body {
   width: 5rem;
 }
 #nav-header {
-  margin-top: -55px;
+  // margin-top: -55px;
 }
 .navbar-dark .navbar-nav .nav-link {
   color: white;
@@ -88,7 +88,7 @@ body {
 }
 .navbar-brand img {
   margin-top: -5px;
-  opacity: 0;
+  // opacity: 0;
   width: 200px;
 }
 .jumbotron {
